# support-ops-env

./: Dockerfile  README.md  app.py  inference.py  pyproject.toml  requirements.txt  server.py
support_ops_env/: README.md  __init__.py  client.py  env.py  graders.py  models.py  openenv.yaml  pyproject.toml  tasks.py
support_ops_env/server/: Dockerfile  app.py  requirements.txt  support_ops_env_environment.py
